--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
